some work with blog

--- a/term_project/LowryJack_2.ipynb
+++ b/term_project/LowryJack_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,10 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import sklearn\n",
+    "import csv\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
     "\n",
     "from warnings import simplefilter\n",
     "from sklearn.exceptions import ConvergenceWarning\n",
@@ -21,11 +24,91 @@
     "\n",
     "plt.rcParams['figure.figsize'] = (12, 12)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.asarray(pd.read_csv(\"BlogFeedback/blogData_train.csv\", header=None))\n",
+    "features = data[:10000, :-1]\n",
+    "comments = data[:10000, -1]\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 280)\n",
+      "(10000,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(features.shape)\n",
+    "print(comments.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13597777777777778\n"
+     ]
+    }
+   ],
+   "source": [
+    "logreg = LogisticRegression(penalty=\"l2\")\n",
+    "logreg.fit(features, comments)\n",
+    "splits = 10\n",
+    "kfold = sklearn.model_selection.KFold(n_splits=splits, random_state=0, shuffle=True)\n",
+    "avg_error = 0\n",
+    "for train_i, test_i in kfold.split(features):\n",
+    "    train_i = np.asarray(train_i)\n",
+    "    test_i = np.asarray(test_i)\n",
+    "    logreg.fit(features[train_i], np.asarray(comments)[train_i])\n",
+    "    estimated_comm = logreg.predict(features[test_i])\n",
+    "    avg_error = avg_error + np.sum(estimated_comm)/len(train_i)\n",
+    "\n",
+    "avg_error = avg_error/splits\n",
+    "\n",
+    "print(avg_error)"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
